test/deprecated/io/iokindCheck.good
iokindCheck.chpl:1: error: iokind is no longer available by default, please insert
a use of the IO module to access it.
