test/deprecated/io/iokindCheck.chpl
var x = iokind.dynamic;
writeln(x);
